fix overlap detection

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -40,7 +40,7 @@ body {
     position: relative;
 }
 
-div.columns, div.top-row {
+.columns, .top-row {
     padding:0;
     margin:0;
     position:absolute;
@@ -51,13 +51,14 @@ div.columns, div.top-row {
     height:calc(100vh - 56px);
     border-top: 1px solid black;
 }
-div.top-row {
+
+.top-row {
     height:$row-height;
     background-color:white;
     z-index:4;
 }
 
-div.day-cell {
+.day-cell {
     margin:0;
     width:$col-width;
     height:$row-height;
@@ -81,43 +82,7 @@ div.day-cell {
         position: relative;
         padding: 5px;
         background: white;
-
-        &.selected {
-            // outline: 3px solid transparentize(black, 0.2);
-            font-weight: bold;
-            // font-size:15px;
-            color: red;
-            border: 1px solid red;
-            // background: white !important;
-            &::before {
-                content: "";
-                display: block;
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                background: transparentize(white, 0.6);
-                z-index: 0;
-            }
-
-            .number {
-                position: relative;
-                z-index: 2;
-            }
-
-        }
-
-        &:hover {
-            cursor: pointer;
-            &::before {
-                content: "";
-                display: block;
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                background: transparentize(red, 0.7);
-            }
-        }
-
+        border-bottom: 1px solid black;
     }
 }
 @import "ember-power-select";
